# SampleSFML

./: CMakeLists.txt  Fly.cpp  main.cpp
